# epub-excerpt

./: .gitignore  README.md  epub_excerpt_shim.py  output.txt  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
src/: cli.ts  component.tsx  core.ts  index.ts
test_build_comp/: README.md  index.html  package-lock.json  package.json
test_build_comp/src/: App.tsx
