[project]
name = "epub-excerpt"
version = "1.1.4"
description = "Extract random excerpts from EPUB files (Node.js tool wrapped for uv)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
epub-excerpt = "epub_excerpt_shim:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "epub_excerpt_shim.py",
    "dist/cli.cjs",
    "dist/index.cjs"
]
